# RAG-WebLoader-FastAPI-Next.js

./: docker-compose.prod.yml
backend/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/src/: .env.example  app.py  openai_utils.py  qdrant.py  rag.py
frontend/: Dockerfile.prod  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: App.css  QuestionForm.js  layout.js  page.js
